# branchclean

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
docs/: architecture.md  cleaner.md  cli.md  config.md  git.md  index.md  models.md  publishing.md  scanner.md
src/branchclean/: __init__.py  cleaner.py  cli.py  config.py  models.py  scanner.py
src/gitclean/: __init__.py  cleaner.py  cli.py  config.py  git.py  models.py  scanner.py
