[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branchclean"
version = "0.1.0"
description = "CLI tool to analyze and clean up stale, merged, and orphaned Git branches"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Syed Shaheer Khalid" },
]
readme = "README.md"
keywords = ["git", "branches", "cleanup", "cli", "stale"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/shaheerkj/branchclean"
Repository = "https://github.com/shaheerkj/branchclean"
Issues = "https://github.com/shaheerkj/branchclean/issues"

[project.scripts]
gitclean = "gitclean.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gitclean"]

[tool.hatch.build.targets.sdist]
include = ["src/gitclean"]
